--- a/public/admin.html
+++ b/public/admin.html
@@ -3,26 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--
-      Google Tag Manager snippet
-      This script loads the GTM container at the top of the <head> so
-      that tags fire correctly.  See the GTM quick start guide for
-      further instructions.
-    -->
-    <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-P7ZWHDR8');</script>
-    <!-- End Google Tag Manager -->
     <title>Painel de Leads</title>
     <link rel="stylesheet" href="/styles.css" />
     <link rel="stylesheet" href="/admin.css" />
 
-    <!-- Global site tags and pixels (GA4, Google Ads, Meta Pixel).  See
-         index.html for configuration details. Replace placeholder IDs
-         with your own IDs as needed. -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXX"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -30,14 +19,12 @@
       gtag('js', new Date());
       gtag('config', 'G-XXXXXXXX', { send_page_view: false });
       gtag('config', 'AW-XXXXXXXX');
-      // Trigger a page_view event for GA4 manually
       gtag('event', 'page_view', {
         page_title: document.title,
         page_location: window.location.href,
         page_path: window.location.pathname
       });
     </script>
-    <!-- Meta Pixel Code -->
     <script>
       !function(f,b,e,v,n,t,s)
       {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -54,17 +41,9 @@
       src="https://www.facebook.com/tr?id=YOUR_PIXEL_ID&ev=PageView&noscript=1" /></noscript>
   </head>
   <body>
-    <!--
-      Google Tag Manager (noscript)
-      Loads a fallback iframe when JavaScript is disabled so that
-      tracking still occurs.  Must appear immediately after the
-      opening <body> tag.
-    -->
-    <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P7ZWHDR8"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
-    <div class="admin-layout">
+    <div class="admin-layout" style="display: none;">
       <header class="card">
         <div class="header-top">
           <h1>Gestão de Leads</h1>
@@ -78,6 +57,25 @@
           <button id="export-btn">Exportar CSV</button>
         </div>
       </header>
+
+      <section class="card">
+        <h2>Lista de Leads</h2>
+        <div id="leads-empty">Nenhum lead cadastrado ainda.</div>
+        <div class="table-wrapper">
+          <table id="leads-table" style="display: none">
+            <thead>
+              <tr>
+                <th>Nome</th>
+                <th>E-mail</th>
+                <th>Telefone</th>
+                <th>Criado em</th>
+                <th>Ações</th>
+              </tr>
+            </thead>
+            <tbody></tbody>
+          </table>
+        </div>
+      </section>
 
       <section class="card">
         <h2>Novo Lead</h2>
@@ -117,7 +115,6 @@
             <label for="message">Mensagem</label>
             <textarea id="message" name="message" rows="3" required></textarea>
           </div>
-
           <div class="grid-row">
             <div>
               <label for="utm_source">UTM Source</label>
@@ -132,7 +129,6 @@
               <input type="text" id="utm_campaign" name="utm_campaign" />
             </div>
           </div>
-
           <div class="grid-row">
             <div>
               <label for="utm_term">UTM Term</label>
@@ -151,29 +147,9 @@
               <input type="text" id="fbclid" name="fbclid" />
             </div>
           </div>
-
           <button type="submit">Salvar lead</button>
           <div id="admin-status" class="status" style="display: none"></div>
         </form>
-      </section>
-
-      <section class="card">
-        <h2>Lista de Leads</h2>
-        <div id="leads-empty">Nenhum lead cadastrado ainda.</div>
-        <div class="table-wrapper">
-          <table id="leads-table" style="display: none">
-            <thead>
-              <tr>
-                <th>Nome</th>
-                <th>E-mail</th>
-                <th>Telefone</th>
-                <th>Criado em</th>
-                <th>Ações</th>
-              </tr>
-            </thead>
-            <tbody></tbody>
-          </table>
-        </div>
       </section>
     </div>
 
