Atualização de Telefone
Campo de telefone com formatação para o formato brasileiro.

--- a/public/admin.html
+++ b/public/admin.html
@@ -11,7 +11,6 @@
     <title>Painel de Leads</title>
     <link rel="stylesheet" href="/styles.css" />
     <link rel="stylesheet" href="/admin.css" />
-
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXX"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -98,6 +97,7 @@
                 pattern="^(\\+?55)? ?(\\(?\\d{2}\\)?)[ -]?\\d{4,5}[ -]?\\d{4}$"
                 title="Informe um telefone brasileiro válido"
                 required
+                maxlength="15"
               />
             </div>
           </div>
@@ -190,6 +190,7 @@
               pattern="^(\\+?55)? ?(\\(?\\d{2}\\)?)[ -]?\\d{4,5}[ -]?\\d{4}$"
               title="Informe um telefone brasileiro válido"
               required
+              maxlength="15"
             />
           </div>
         </div>
