Campo de telefone
.

--- a/public/admin.html
+++ b/public/admin.html
@@ -94,10 +94,10 @@
                 type="tel"
                 id="phone"
                 name="phone"
-                pattern="^(\\+?55)? ?(\\(?\\d{2}\\)?)[ -]?\\d{4,5}[ -]?\\d{4}$"
+                pattern="^(\\+?55)? ?(\\(?\\d{2}\\)?)[ -]?9[ -]?\\d{4}[ -]?\\d{4}$"
                 title="Informe um telefone brasileiro válido"
                 required
-                maxlength="15"
+                maxlength="16"
               />
             </div>
           </div>
@@ -187,10 +187,10 @@
             <input
               type="tel"
               name="phone"
-              pattern="^(\\+?55)? ?(\\(?\\d{2}\\)?)[ -]?\\d{4,5}[ -]?\\d{4}$"
+              pattern="^(\\+?55)? ?(\\(?\\d{2}\\)?)[ -]?9[ -]?\\d{4}[ -]?\\d{4}$"
               title="Informe um telefone brasileiro válido"
               required
-              maxlength="15"
+              maxlength="16"
             />
           </div>
         </div>
