--- a/public/index.html
+++ b/public/index.html
@@ -3,77 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--
-      Google Tag Manager snippet
-      This script loads the GTM container as early as possible so that
-      tags configured in the container fire correctly.  Inserted at
-      the top of the <head> section per Google’s installation
-      instructions.  See https://tagmanager.google.com for details.
-    -->
-    <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-P7ZWHDR8');</script>
-    <!-- End Google Tag Manager -->
     <title>Cadastro de Leads</title>
     <link rel="stylesheet" href="/styles.css" />
 
-    <!-- Global site tags and pixels (GA4, Google Ads, Meta Pixel).
-         These snippets load the measurement libraries and initialise the
-         tracking configuration. Replace the placeholder IDs (e.g.
-         G-XXXXXXXX, AW-XXXXXXXXX/XXXXXXXXXX, YOUR_PIXEL_ID) with the
-         appropriate identifiers from your accounts. Without valid IDs
-         the events will still fire, which is sufficient for Tag
-         Assistant evaluation. -->
-    <!-- Google tag (gtag.js) for GA4 and Google Ads -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXX"></script>
-    <script>
-      // Initialise dataLayer and gtag function for GA4 and Google Ads.
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){ dataLayer.push(arguments); }
-      gtag('js', new Date());
-      // Configure GA4 (replace with your measurement ID)
-      gtag('config', 'G-XXXXXXXX', { send_page_view: false });
-      // Configure Google Ads (replace with your conversion ID)
-      gtag('config', 'AW-XXXXXXXX');
-      // Manually log a page_view event for GA4
-      gtag('event', 'page_view', {
-        page_title: document.title,
-        page_location: window.location.href,
-        page_path: window.location.pathname
-      });
-    </script>
-
-    <!-- Meta Pixel Code -->
-    <script>
-      !function(f,b,e,v,n,t,s)
-      {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-      n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-      if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-      n.queue=[];t=b.createElement(e);t.async=!0;
-      t.src=v;s=b.getElementsByTagName(e)[0];
-      s.parentNode.insertBefore(t,s)}(window, document,'script',
-      'https://connect.facebook.net/en_US/fbevents.js');
-      fbq('init', 'YOUR_PIXEL_ID'); // Replace with your Pixel ID
-      fbq('track', 'PageView');
-    </script>
-    <noscript><img height="1" width="1" style="display:none"
-      src="https://www.facebook.com/tr?id=YOUR_PIXEL_ID&ev=PageView&noscript=1"/></noscript>
+   <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-MMF7T94N');</script>
+<!-- End Google Tag Manager -->
 
   </head>
   <body>
-    <!--
-      Google Tag Manager (noscript)
-      The noscript part of the GTM snippet ensures that a minimal
-      tracking pixel still loads when JavaScript is disabled.  This
-      must be placed immediately after the opening <body> tag.
-    -->
-    <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P7ZWHDR8"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MMF7T94N"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
     <div class="container">
       <section class="hero">
         <h1>Cadastre-se e receba conteúdos exclusivos</h1>
