--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-MMF7T94N');</script>
 <!-- End Google Tag Manager -->
+ <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PBXT164FXH"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PBXT164FXH');
+</script>
 
   </head>
   <body>
@@ -71,7 +80,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <input type="hidden" name="gclid" />
           <input type="hidden" name="fbclid" />
 
-          <button type="submit">Enviar</button>
+          <button type="submit" id="botao-gtm">Enviar</button>
           <div id="status" class="status" style="display: none"></div>
         </form>
         <p class="admin-link">
